images not showing in githubPAGES, trying to fix it #3 - inside JS and CSS files and color modifications, for better experience

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   display: inline-block;
 }
 .DICEDIV.px-4.py-5.my-5.text-center{
-  background-color: grey;
+  background-color: #3b3b3b;
   border-radius: 50px;
   margin-left: 100px;
   margin-right: 100px;
